app/media-server/streetmerchant/streetmerchant-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streetmerchant
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streetmerchant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: streetmerchant
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
      containers:
      - name: streetmerchant
        image: ghcr.io/jef/streetmerchant
        imagePullPolicy: Always
        # MountVolume.SetUp failed for volume "kube-api-access ca.crt no space left
        # resources:
        #   limits:
        #     memory: 300
        #   requests:
        #     memory: 150
        # volumeMounts:
        # - mountPath: /datastore
        #   name: datastore
      restartPolicy: Always
      # volumes:
      # - name: datastore
      #   persistentVolumeClaim:
      #     claimName: streetmerchant
status: {}
