app/media-server/streetmerchant/changedetection-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: streetmerchant
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: streetmerchant
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
