app/media-server/streetmerchant/changedetection-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: streetmerchant
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: streetmerchant.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: streetmerchant
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - streetmerchant.home.adaminformatika.hu
    secretName: streetmerchant.home.adaminformatika.hu
